# esp8266_milight_hub

./: .gitmodules  CMakeLists.txt
includes/single_json/: ArduinoJson.h
lib/DataStructures/: LinkedList.h
lib/Helpers/: IntParsing.h  JsonHelpers.h  Size.h  Units.h
lib/LEDStatus/: LEDStatus.cpp  LEDStatus.h
lib/MiLight/: CctPacketFormatter.cpp  CctPacketFormatter.h  FUT020PacketFormatter.cpp  FUT020PacketFormatter.h  FUT02xPacketFormatter.cpp  FUT089PacketFormatter.cpp  FUT089PacketFormatter.h  FUT091PacketFormatter.cpp  FUT091PacketFormatter.h  MiLightClient.cpp  MiLightClient.h  MiLightRemoteConfig.cpp  MiLightRemoteConfig.h  PacketFormatter.cpp  PacketFormatter.h  PacketSender.cpp  RgbCctPacketFormatter.cpp  RgbCctPacketFormatter.h  RgbPacketFormatter.cpp  RgbPacketFormatter.h  RgbwPacketFormatter.cpp  RgbwPacketFormatter.h  V2PacketFormatter.cpp  V2RFEncoding.cpp  V2RFEncoding.h
lib/MiLightState/: GroupState.cpp  GroupState.h  GroupStatePersistence.cpp
lib/Radio/: LT8900MiLightRadio.cpp  LT8900MiLightRadio.h  MiLightRadioConfig.h  PL1167_nRF24.cpp  RadioUtils.cpp
lib/Settings/: AboutHelper.cpp  AboutHelper.h  Settings.cpp  Settings.h
lib/Transitions/: ChangeFieldOnFinishTransition.cpp  ChangeFieldOnFinishTransition.h  ColorTransition.cpp  ColorTransition.h  FieldTransition.cpp  FieldTransition.h  Transition.cpp  Transition.h
lib/Types/: BulbId.cpp  BulbId.h  GroupStateField.cpp  MiLightRemoteType.cpp  MiLightRemoteType.h  MiLightStatus.cpp  MiLightStatus.h  ParsedColor.cpp  ParsedColor.h  RF24Channel.cpp  RF24Channel.h  RF24PowerLevel.cpp  RF24PowerLevel.h
src/: main.cpp
test/d1_mini/: test.cpp
